--- a/static/style.css
+++ b/static/style.css
@@ -24,11 +24,24 @@ background-color: #f1f1f1;
     margin-bottom: 10px;
  }
  
- input [type="text"],
- input [type="email"],
- input [type="tel"] {
+ input[type="text"],
+ input[type="email"],
+ input[type="tel"] {
     width: 95%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
  }
+ input[type="submit"] {
+   width: 100%;
+   padding: 10px;
+   border: none;
+   border-radius: 5px;
+   background: #007bff;
+   color: #fff;
+   cursor: pointer;
+ }
+
+input[type="submit"]:hover {
+   background-color: #0056b3;
+   }
